--- a/package.json
+++ b/package.json
@@ -62,13 +62,15 @@
     "@googlemaps/google-maps-services-js": "^3.4.0",
     "@raycast/api": "^1.0.0",
     "@supabase/supabase-js": "^2.47.10",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.469.0",
     "node-geocoder": "^4.4.1",
     "react": "^18.2.0",
-    "tz-lookup": "^6.1.25"
+    "tz-lookup": "^6.1.25",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@raycast/eslint-config": "^1.0.11",
